@@ -21,6 +21,7 @@ Following changes may create regressions for some external modules, but were nec
 * The method get_substitutionarray_shipment_lines() has been removed. Use the generic get_substitutionarray_lines() instead.
 * Recheck setup of your module workflow to see if you need to enable the new setting to have shipment set to billed automatically 
   when an invoice from a shipment is validated (and if your process is to make invoice on shipment and not on order).
+* It was possible to use a variable $soc or $right inside a php code condition of some extrafields properties, this is no more true (this vars are no more defined globaly).
 
 
 ***** ChangeLog for 18.0.1 compared to 18.0.0 *****
